--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,19 +14,19 @@ spring:
     password: 1234
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
         format_sql: true
     open-in-view: false
   liquibase:
-    change-log: classpath:db/migration/db.changelog-master.yml
+    change-log: classpath:db/migration/V1__create_users_table.yaml
 server:
   port: 8080
 
 jwt:
-  secret: JPDkPrFVaF6xFFSRArevJI4JfNNkDaF1lZKTfNLTqVc=
+  secret: QMXJ5e+VceqEj+erF7s1//xb6rkeGtVm8M2J8NRwYYA=
   expiration: 3600000 # 1 час в миллисекундах
 
 logging:
