--- a/src/main/resources/db/migration/V1__create_cards_table.yaml
+++ b/src/main/resources/db/migration/V1__create_cards_table.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: 2
       author: Akorad
       changes:
         - createTable:
-            tableName: users
+            tableName: cards
             columns:
               - column:
                   name: id
@@ -12,28 +12,34 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
-              - column:
-                  name: username
-                  type: VARCHAR(255)
-                  constraints:
                     nullable: false
-                    unique: true
               - column:
-                  name: firstName
+                  name: number
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
-                  name: lastName
+                  name: owner_name
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
-                  name: password
-                  type: VARCHAR(255)
-              - column:
-                  name: role
+                  name: expiration_date
                   type: VARCHAR(20)
+                  constraints:
+                    nullable: false
               - column:
-                  name: enabled
-                  type: BOOLEAN
+                  name: status
+                  type: VARCHAR(20)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created_at
+                  type: TIMESTAMP
+                  constraints:
+                    nullable: false
+              - column:
+                  name: user_id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
