--- a/src/main/resources/db/migration/V1__create_cards_table.yaml
+++ b/src/main/resources/db/migration/V1__create_cards_table.yaml
@@ -43,3 +43,9 @@ databaseChangeLog:
                   type: BIGINT
                   constraints:
                     nullable: false
+              - column:
+                  name: balance
+                  type: DOUBLE PRECISION
+                  defaultValueNumeric: 0.0
+                  constraints:
+                    nullable: false
