--- a/src/main/resources/db/migration/V1__create_users_table.yaml
+++ b/src/main/resources/db/migration/V1__create_users_table.yaml
@@ -19,12 +19,12 @@ databaseChangeLog:
                     nullable: false
                     unique: true
               - column:
-                  name: firstName
+                  name: first_name
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
-                  name: lastName
+                  name: last_name
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
