--- a/src/main/resources/db/migration/master.yaml
+++ b/src/main/resources/db/migration/master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/migration/V1__create_users_table.yaml
   - include:
       file: db/migration/V1__create_cards_table.yaml
+  - include:
+      file: db/migration/V1__create_transactions_table.yaml
