--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,9 @@ pom.xml — файл для управления зависимостями пр
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.5.3</version>
                 <configuration>
+                    <mainClass>com.example.bankcards.BankCardsApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -155,8 +157,16 @@ pom.xml — файл для управления зависимостями пр
                         </exclude>
                     </excludes>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
+
 
 </project>
