--- a/src/main/resources/db/migration/V1__create_cards_table.yaml
+++ b/src/main/resources/db/migration/V1__create_cards_table.yaml
@@ -18,6 +18,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
+                    unique: true
               - column:
                   name: owner_name
                   type: VARCHAR(255)
